# gaon

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  env.example  pyproject.toml
ai/: README.md  pyproject.toml
ai/gaon_ai/: __init__.py  agents.py  chain_a.py  chain_b.py  corpus.py  ingest.py  llm.py  llm_gemini.py  llm_runtime.py  rag.py  testing.py
ai/gaon_ai/embedders/: __init__.py  kure.py
ai/gaon_ai/stores/: __init__.py  pgvector.py
ai/pilots/llm_sku/: .gitignore  README.md  requirements.txt  run_pilot.py
ai/pilots/llm_sku/clients/: claude_client.py  gemini_client.py
ai/pilots/llm_sku/common/: image_loader.py  metrics.py  retry.py
ai/pilots/llm_sku/dataset/: manifest.json
ai/pilots/llm_sku/eval/: ab_fixtures.py  scorer.py  verdict.py
ai/pilots/llm_sku/tests/: conftest.py  test_retry.py  test_scorer.py  test_verdict.py
ai/scripts/: eval_retrieval.py  ingest_corpus.py  smoke_chain_a.py
ai/tests/: test_chain_a.py  test_corpus_ingest.py  test_llm_gemini.py  test_rag_impl.py  test_rag_integration.py  test_rag_scaffolding.py  test_teacher_comm.py
be/: README.md  pyproject.toml
be/alembic/: env.py  script.py.mako
be/alembic/versions/: 0001_common_tables.py  0002_chain_a_results.py  0003_calendar_events.py  0004_activity_events.py  0004_kb_embeddings.py  0005_kb_embeddings.py  0005_messages.py  0006_messages.py  0007_children_school_name.py  0008_children_grade_expand.py  0009_children_grade_narrow.py  0010_notifications.py
be/app/: chain_deps.py  config.py  db.py  main.py  security.py  storage.py
be/app/models/: __init__.py  activity.py  calendar.py  chain_a.py  common.py  messages.py  notifications.py
be/app/routers/: auth.py  calendar.py  children.py  common.py  documents.py  notifications.py  onboarding.py  profile.py  report.py  teacher_message.py
be/app/services/: activity.py  kakao.py
be/scripts/: migrate-guard.sh  scan_destructive.py
be/tests/: test_activity_service.py  test_auth_deeplink.py  test_calendar_events.py  test_calendar_save_selected.py  test_calendar_source_title.py  test_chain_deps_rag.py  test_delete_account.py  test_documents_upload.py  test_health.py
data/corpus/: README.md
data/evalset/: retrieval_gold.jsonl
fe/: .gitignore  CLAUDE.md  README.md  pubspec.yaml
fe/lib/: main.dart
fe/test/: widget_test.dart
fe/web/: index.html  manifest.json
infra/: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  nginx.conf
results/: observations.md
results/run1/: ab_key.json  ab_pairs.md  run_meta.json  run_report.md  scores.md
results/run2/: run_meta.json  run_report.md  scores.md
shared/: README.md
shared/python/: pyproject.toml
shared/python/gaon_shared/: __init__.py  schema.py
shared/python/tests/: test_schema.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+138 files in other folders)
