# gaon-ai — 에이전트 4종 + RAG. 프로젝트 루트 = ai, 패키지 = gaon_ai. gaon-shared에 의존.
# 설치 순서 중요: shared 먼저(README 참조). dev 추가물은 [project.optional-dependencies].dev.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaon-ai"
version = "0.1.0"
description = "GAON AI — 에이전트 4종 + RAG (Chain A 코어)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "gaon-shared",
    # 결정 #4(단일 Gemini) — 신 SDK. 구 SDK google-generativeai 아님
    "google-genai>=1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black",
]
# F-CORE-2 실구현(KURE in-process + pgvector) — 무겁다(torch). 단위 테스트에는 불필요.
rag = [
    "sentence-transformers>=3",
    "psycopg[binary,pool]>=3.1",
    "kss>=5",  # 한국어 문장분할(kss_splitter) — 인제스트 배치 전용
]

[tool.hatch.build.targets.wheel]
packages = ["gaon_ai"]
