# gaon-be — FastAPI 백엔드. 오케스트레이터 = 엔드포인트(별도 /orchestrate 없음).
# 프로젝트 루트 = be, 패키지 = app. gaon-shared·gaon-ai에 의존(설치 순서: shared → ai → be).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaon-be"
version = "0.1.0"
description = "GAON BE — FastAPI 오케스트레이터"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "alembic",
    "psycopg[binary]>=3.1",
    "pydantic-settings",
    "python-dotenv",
    "pyjwt",
    "httpx",
    "boto3",
    "python-multipart",
    "gaon-shared",
    "gaon-ai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
